# financial-planner-simulator

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  debug_output.txt  pyproject.toml  test_etl.py
backend/alembic/: env.py
backend/alembic/versions/: 2dc888ebce04_add_xp_fields.py  43ddfaea3495_initial_schema.py  7fd98f3a22c3_add_recurring_system.py  9e3e24f4a6c1_add_scenarios.py  bc7338237716_add_transfer_type.py  c4987ce930fe_add_recurring_dates.py  c60687a27896_add_is_verified_flag.py  d17d40dd88b4_add_reference_date.py  e1a2b3c4d5e6_add_unique_hash_to_transaction.py  f9dfdf14ef8d_add_source_to_simulation.py
backend/app/: main.py
backend/app/api/: analytics.py  dashboard.py  recurring.py  scenarios.py  simulation.py  transactions.py
backend/app/core/: database.py
backend/app/etl/: importer.py  seed_categories.py
backend/app/models/: __init__.py  recurring.py  scenario.py  transaction.py
backend/app/schemas/: recurring.py  scenario.py  transaction.py
backend/app/services/: analytics.py  categorizer.py
backend/tests/integration/: test_transactions_api.py
backend/tests/unit/: test_transaction_schema.py
frontend/: .eslintrc.cjs  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DashboardLayout.tsx  InfoIconTooltip.tsx
frontend/src/components/transactions/: AICategorizeDialog.tsx  BulkDeleteDialog.tsx  CategoryInput.tsx  PayInvoiceDialog.tsx  TransactionTable.tsx
frontend/src/components/ui/: index.tsx
frontend/src/features/dashboard/: DashboardPage.tsx
frontend/src/features/dashboard/components/: CategoryBreakdown.tsx  FinancialHealthWidget.tsx  FinancialOverview.tsx  KPICards.tsx  SourceBreakdown.tsx
frontend/src/features/recurring/components/: RecurringTransactionDialog.tsx
frontend/src/features/transactions/components/: DataImport.tsx  ReconciliationModal.tsx  TransactionList.tsx
frontend/src/hooks/: useFinancialData.ts  useTransactions.ts
frontend/src/pages/: Recurring.tsx  Simulation.tsx  Transactions.tsx
