[tool.poetry]
package-mode = false
name = "finances-backend"
version = "0.1.0"
description = "Personal Finance Management Backend"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
sqlalchemy = "^2.0.0"
asyncpg = ">=0.29.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
polars = ">=1.0.0"
python-multipart = "^0.0.6"
alembic = "^1.11.0"
psycopg2-binary = "^2.9.0"
langchain = ">=1.0.0"
langchain-community = ">=0.3.0"
langchain-ollama = ">=0.2.0"
langgraph = ">=1.0.0"
rapidfuzz = ">=3.0.0"
python-dateutil = ">=2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
